# contactsAPI

./: .env.ex  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 057d5a19faac_add_field_confirmed.py  16bc96650009_initial.py  6d36b5c87b21_added_users.py
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_main.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py  test_unit_repository_contacts.py
